# slydb

./: .gitignore  .pre-commit-config.yaml  README.md  model.py  pyproject.toml  reindex.py  x.py  z.py
src/slydb/: __init__.py  app.py  cli.py  dbx.py  index.py  keynote.py  meili.py  model.py
src/slydb/templates/: index.html
