[project]
name = "slydb"
version = "0.1.0"
description = "Add your description here"
authors = [{ name = "Talley Lambert", email = "talley.lambert@gmail.com" }]
dependencies = [
    "flask>=3.0.3",
    "keynote-parser==1.13.1.0",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.4.4",
    "ipython>=8.24.0",
    "rich>=13.7.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/slydb"]

# https://github.com/charliermarsh/ruff
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["src", "tests"]
select = [
    "E",    # style errors
    "F",    # flakes
    "W",    # warnings
    "I",    # isort
    "UP",   # pyupgrade
    "S",    # bandit
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "A001", # flake8-builtins
    "TCH",  # flake8-typecheck
    "TID",  # flake8-tidy-imports
    "RUF",  # ruff-specific rules
]
ignore = [
    "D100",   # Missing docstring in public module
    "D107",   # Missing docstring in __init__
    "D203",   # 1 blank line required before class docstring
    "D212",   # Multi-line docstring summary should start at the first line
    "D213",   # Multi-line docstring summary should start at the second line
    "D401",   # First line should be in imperative mood
    "D413",   # Missing blank line after last section
    "D416",   # Section name should end with a colon
    "RUF009", # Do not perform function call in dataclass defaults
]

[tool.ruff.per-file-ignores]
"tests/*.py" = ["D", "S", "RUF012"]
"benchmarks/*.py" = ["D", "RUF012"]
